added use session timeout hook and bug fix for logout

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yochevedg/reactutils",
   "private": false,
-  "version": "1.1.0",
+  "version": "1.1.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-idle-timer": "^5.7.2",
+    "react-router-dom": "^7.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
